@@ -1,6 +1,7 @@
 TeXstudio 4.1.1
 -----------------
-- 
+- fix weird OSX issue that cursor keys were not working
+- allow maximise config dialog 
 
 TeXstudio 4.1.0
 -----------------
